--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
+    "@nestjs/throttler": "^6.2.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
