--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "migrate": "npx sequelize-cli db:migrate",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "start:dev:docker": "docker-compose down && docker-compose up --build",
-    "start:docker": "npm run migrate && node dist/main"
+    "start:docker": "docker-compose down && docker-compose up --build"
+
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
